--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
   .subtitle{ font-size:13px; color:var(--muted); margin-top:2px; }
 
   .wheel-area { display:flex; gap:18px; align-items:center; justify-content:center; padding:8px 6px; flex:1; min-height:420px; }
-  .wheel-frame { width:580px; height:580px; position:relative; display:flex; align-items:center; justify-content:center; border-radius:50%; padding:10px; }
+  /* make wheel-frame responsive: use min() so it never exceeds available width and aspect-ratio to keep it square */
+  .wheel-frame { width: min(580px, 92vw); aspect-ratio: 1 / 1; position:relative; display:flex; align-items:center; justify-content:center; border-radius:50%; padding:10px; max-width:100%; }
 
   canvas#wheel {
     width:100%; height:100%; border-radius:50%;
     box-shadow: 0 20px 60px rgba(2,8,23,0.6), inset 0 -10px 40px rgba(0,0,0,0.25);
     will-change: transform; transform-origin:50% 50%;
+    display:block;
   }
 
   /* pointer */
@@ -246,7 +248,8 @@
   /* responsive: wrap controls to rows on smaller widths */
   @media (max-width:1100px){
     .app{ grid-template-columns: 1fr; }
-    .wheel-frame{ width:520px;height:520px;}
+    /* prefer percent-based width so it fits in narrow screens */
+    .wheel-frame{ width: min(520px, 92vw); aspect-ratio:1/1; }
     .controls-right{ width:100%; max-height: calc(100vh - 120px); }
     .json-panel { right: 18px; left: auto; width: 84%; bottom: 108px; }
     .save-bar-left { width: 100%; }
@@ -254,11 +257,28 @@
     .controls-bottom { gap:10px; }
   }
   @media (max-width:640px){
-    .wheel-frame{ width:360px;height:360px;}
+    /* on narrow mobile screens center vertically and reduce paddings */
+    body{ align-items:center; padding:14px; }
+    .app{ max-width: calc(100% - 28px); gap:12px; }
+    .wheel-frame{ width: min(360px, 94vw); aspect-ratio: 1/1; padding:8px; }
     .json-panel { width: 92%; left: 4%; right: 4%; bottom: 110px; }
     .json-grid { grid-template-columns: 1fr; }
     .set-name { max-width:100%; flex: 1 1 auto; }
     .saved-select { max-width:100%; flex: 1 1 auto; }
+    .controls-right { width:100%; max-height: none; }
+    .panel { padding:12px; min-height: auto; }
+    .wheel-area { min-height: auto; padding:6px; gap:10px; }
+    /* scale center button so it never overflows small wheels */
+    .center-btn { width: clamp(96px, 24%, 140px); height: clamp(96px, 24%, 140px); }
+    .center-btn .big{ font-size: clamp(16px, 3.5vw, 20px); }
+    .center-btn .small{ font-size: clamp(10px, 2.6vw, 12px); }
+  }
+
+  /* a little extra safety for ultra-small widths */
+  @media (max-width:380px) {
+    .wheel-frame { width: min(320px, 94vw); }
+    .center-btn { width: clamp(84px, 28%, 120px); height: clamp(84px, 28%, 120px); }
+    .pointer .tri { border-left:14px solid transparent;border-right:14px solid transparent;border-top:20px solid var(--accent1); }
   }
 </style>
 </head>
@@ -300,7 +320,7 @@
       </div>
     </div>
 
-    <div style="display:flex;gap:12px;align-items:center;justify-content:center;margin-top:12px">
+    <div style="display:flex;gap:12px;align-items:center;justify-content:center;margin-top:12px;flex-wrap:wrap">
       <div class="row small">
         <label>Extra rotations</label>
         <input id="rotations" type="number" value="6" min="0" step="1" style="width:80px;padding:8px;border-radius:8px;background:var(--glass);border:1px solid rgba(255,255,255,0.03);color:inherit;margin-left:8px">
@@ -476,6 +496,8 @@
     resizeConfetti();
   }
   window.addEventListener('resize', ()=>{ resizeAndScale(); draw(); });
+  // orientation change often needs explicit handling on some mobile browsers
+  window.addEventListener('orientationchange', ()=>{ setTimeout(()=>{ resizeAndScale(); draw(); }, 120); });
 
   function resizeConfetti(){
     const rect = document.body.getBoundingClientRect();
